# noria-store

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/noria_store/: client.py
tests/: test_storage.py
