[project]
name = "noria-store"
version = "0.1.1"
description = "Configurable S3 and R2 storage client for Python services."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Noria Labs" }]
license = "MIT"
dependencies = [
    "boto3>=1.35.0",
    "botocore>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["noria_store*"]

[tool.setuptools.package-data]
noria_store = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
package = true
